remove lnsl for macos

--- a/test0/Makefile.trpc
+++ b/test0/Makefile.trpc
@@ -6,41 +6,41 @@
 CLIENT = trpc_client
 SERVER = trpc_server
 
-SOURCES_CLNT.c = 
-SOURCES_CLNT.h = 
-SOURCES_SVC.c = 
-SOURCES_SVC.h = 
+SOURCES_CLNT.c =
+SOURCES_CLNT.h =
+SOURCES_SVC.c =
+SOURCES_SVC.h =
 SOURCES.x = trpc.x
 
-TARGETS_SVC.c = trpc_svc.c trpc_server.c trpc_xdr.c 
-TARGETS_CLNT.c = trpc_clnt.c trpc_client.c trpc_xdr.c 
+TARGETS_SVC.c = trpc_svc.c trpc_server.c trpc_xdr.c
+TARGETS_CLNT.c = trpc_clnt.c trpc_client.c trpc_xdr.c
 TARGETS = trpc.h trpc_xdr.c trpc_clnt.c trpc_svc.c trpc_client.c trpc_server.c
 
 OBJECTS_CLNT = $(SOURCES_CLNT.c:%.c=%.o) $(TARGETS_CLNT.c:%.c=%.o)
 OBJECTS_SVC = $(SOURCES_SVC.c:%.c=%.o) $(TARGETS_SVC.c:%.c=%.o)
-# Compiler flags 
+# Compiler flags
 
-CFLAGS += -g 
-LDLIBS += -lnsl
-RPCGENFLAGS = 
+CFLAGS += -g
+#LDLIBS += -lnsl
+LDLIBS +=
+RPCGENFLAGS =
 
-# Targets 
+# Targets
 
 all : $(CLIENT) $(SERVER)
 
-$(TARGETS) : $(SOURCES.x) 
+$(TARGETS) : $(SOURCES.x)
 	rpcgen $(RPCGENFLAGS) $(SOURCES.x)
 
-$(OBJECTS_CLNT) : $(SOURCES_CLNT.c) $(SOURCES_CLNT.h) $(TARGETS_CLNT.c) 
+$(OBJECTS_CLNT) : $(SOURCES_CLNT.c) $(SOURCES_CLNT.h) $(TARGETS_CLNT.c)
 
-$(OBJECTS_SVC) : $(SOURCES_SVC.c) $(SOURCES_SVC.h) $(TARGETS_SVC.c) 
+$(OBJECTS_SVC) : $(SOURCES_SVC.c) $(SOURCES_SVC.h) $(TARGETS_SVC.c)
 
-$(CLIENT) : $(OBJECTS_CLNT) 
-	$(LINK.c) -o $(CLIENT) $(OBJECTS_CLNT) $(LDLIBS) 
+$(CLIENT) : $(OBJECTS_CLNT)
+	$(LINK.c) -o $(CLIENT) $(OBJECTS_CLNT) $(LDLIBS)
 
-$(SERVER) : $(OBJECTS_SVC) 
+$(SERVER) : $(OBJECTS_SVC)
 	$(LINK.c) -o $(SERVER) $(OBJECTS_SVC) $(LDLIBS)
 
  clean:
 	 $(RM) core $(TARGETS) $(OBJECTS_CLNT) $(OBJECTS_SVC) $(CLIENT) $(SERVER)
-
