revert output directory change

--- a/tecFirmware/Source/BootCommander/CMakeLists.txt
+++ b/tecFirmware/Source/BootCommander/CMakeLists.txt
@@ -51,7 +51,7 @@ option(LINT_ENABLED "Configurable to enable/disable the PC-lint target" OFF)
 # Directories
 #****************************************************************************************
 # Set the output directory
-set (PROJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../..)
+set (PROJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../..)
 
 # Set the output directory for the generic no-config case (e.g. with mingw)
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIRECTORY} )
