test exe for reading out flow switch

--- a/cantest/Makefile
+++ b/cantest/Makefile
@@ -8,7 +8,7 @@ else
   MQTTLIBDIR = -L/usr/lib/arm-linux-gnueabihf/ -lmosquittopp 
 endif
 
-all: can_send can_receive rpi_i2c crc 
+all: can_send can_receive rpi_i2c crc i2ctest i2ctest2 i2ctest3
 
 can_send:can_send.c 
 	    $(CXX) $(CFLAGS) -o $@ $^ 
@@ -17,16 +17,16 @@ can_receive:can_receive.c
 	    $(CXX) $(CFLAGS) -o $@ $^ 
 
 i2ctest: i2ctest.c
-	gcc -o $@  $^
+	$(CC) -o $@  $^
 
 i2ctest2: i2ctest2.c
-	gcc -o $@  $^
+	$(CC) -o $@  $^
 
 i2ctest3: i2ctest3.c
-	gcc -o $@  $^
+	$(CC) -o $@  $^
 
 rpi_i2c: rpi_i2c.c
-	gcc -o $@  $^ -lbcm_host
+	$(CXX) -o $@  $^ -lbcm_host
 
 container: container.cc
 	$(CXX) $(CFLAGS) -o $@  $^
@@ -42,4 +42,5 @@ mqtt: mqtt.o
 
 
 clean:
-	    $(RM) *.o can_send mqtt container .*.sw?
+	$(RM) *.o can_send mqtt container .*.sw?
+	$(RM) i2ctest i2ctest2 i2ctest3 crc rpi_i2c can_receive
